# auto_ai_vedio

./: .gitignore  AGENTS.md  README.md  pyproject.toml
examples/demo_project/: project.yaml  shots.json
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  store.ts  types.ts
scripts/: comfyui_image_adapter.py  comfyui_runtime_doctor.py  comfyui_wan_adapter.py  wan_gpu_runbook.py  wan_http_adapter.py  wan_remote_smoke.py  wan_runtime_doctor.py
src/auto_video/: __init__.py  asset_library.py  cli.py  comfyui_image_adapter.py  comfyui_lipsync_adapter.py  errors.py  (+36 more)
tests/: conftest.py  test_asset_library.py  test_cli.py  test_cli_jobs.py  test_comfyui_image_adapter.py  test_comfyui_lipsync_adapter.py  test_comfyui_runtime_doctor.py  test_comfyui_wan_adapter.py  test_continuity.py  test_external_command_provider.py  test_first_frame_generation.py  test_first_frame_prompt.py  test_job_builder.py  test_job_pipeline.py  test_job_selection.py  test_job_store.py  test_jobs.py  test_local_tts_provider.py  test_manifest.py  test_mock_pipeline.py  test_models_validation.py  test_novel.py  test_project_loader.py  test_prompts.py  test_provider_jobs.py  test_remote_cli.py  test_remote_doctor.py  test_remote_profiles.py  test_remote_transport.py  test_remote_wrapup.py  test_render_probe.py  test_script_storyboard.py  test_wan_gpu_runbook.py  test_wan_http_adapter.py  test_wan_remote_smoke.py  test_wan_runtime_doctor.py  test_web.py  test_worker_bundle.py  test_worker_cli.py  test_worker_import.py  (+2 more)
(+87 files in other folders)
