[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-ai-video"
version = "0.1.0"
description = "Seedance-inspired AI video production CLI pipeline"
requires-python = ">=3.12"
dependencies = [
  "PyYAML>=6.0.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2"
]

[project.scripts]
auto-video = "auto_video.cli:entrypoint"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
